--- a/limit-order-system/DockerFile
+++ b/limit-order-system/DockerFile
@@ -1,7 +1,7 @@
 FROM messense/rust-musl-cross:x86_64-musl as chef
 ENV SQLX_OFFLINE=true
 RUN cargo install cargo-chef
-WORKDIR /api-deployment-example
+WORKDIR /limit-order-system
 
 FROM chef AS planner
 # Copy source code from previous stage
@@ -10,7 +10,7 @@ COPY . .
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
-COPY --from=planner /api-deployment-example/recipe.json recipe.json
+COPY --from=planner /limit-order-system/recipe.json recipe.json
 # Build & cache dependencies
 RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json
 # Copy source code from previous stage
@@ -20,6 +20,6 @@ RUN cargo build --release --target x86_64-unknown-linux-musl
 
 # Create a new stage with a minimal image
 FROM scratch
-COPY --from=builder /api-deployment-example/target/x86_64-unknown-linux-musl/release/api-deployment-example /api-deployment-example
-ENTRYPOINT ["/api-deployment-example"]
+COPY --from=builder /limit-order-system/target/x86_64-unknown-linux-musl/release/limit-order-system /limit-order-system
+ENTRYPOINT ["/limit-order-system"]
 EXPOSE 3000
